--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,6 @@ COPY . .
 
 RUN mkdir -p temp montages
 
-EXPOSE 8000
+EXPOSE 10000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-10000}"]
