Massive refactor - switching to local software

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,8 +10,5 @@ pydub>=0.25.1
 pyloudnorm>=0.1.1
 numpy>=1.24.0
 scipy>=1.11.0
-motor>=3.3.0
-python-jose[cryptography]>=3.3.0
-bcrypt>=4.0.0
 python-dotenv>=1.0.0
-pydantic[email]>=2.0.0
+pydantic>=2.0.0
